Devops-Notes/Production-deployment-ways/Kubernetes/Manifeast-files/Deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frissly-dev-backend
  labels:
    app: frissly-dev-backend
spec:
  serviceName: frissly-dev-backend-service
  replicas: 1
  selector:
    matchLabels:
      app: frissly-dev-backend
  template:
    metadata:
      labels:
        app: frissly-dev-backend
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: frissly-dev-backend
          image: manoj3003/frissly-k8s-images:3
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: volume1
              mountPath: /opt/backend
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: volume1
          persistentVolumeClaim:
            claimName: ebs-pvc
