Devops-Notes/Production-deployment-ways/Kubernetes/Manifeast-files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frissly-dev-backend-service
  labels:
    app: frissly-dev-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4001
  selector:
    app: frissly-dev-backend
