Devops-Notes/Production-deployment-ways/Kubernetes/Manifeast-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ingress.frissly.com
      secretName: my-app-tls-secret
  rules:
    - host: ingress.frissly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frissly-dev-backend-service
                port:
                  number: 80
